Disable ghost rows if don't match

--- a/src/components/ghost-grid/GhostGrid.module.css
+++ b/src/components/ghost-grid/GhostGrid.module.css
@@ -2,10 +2,6 @@
     background: lightgray;
 }
 
-.Cell-True {
-    background: green;
-}
-
-.Cell-False {
-    background: red;
+.TableRowInactive {
+    background: lightgray;
 }
